# python-pkg-example

./: README.md  local_run.py  pyproject.toml  requirements.txt
src/reifel_pkg/: __init__.py  py_reifel.py
src/reifel_pkg/modules/: module1.py  module2.py
