[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reifel-pkg"
requires-python = ">=3.7.1"
authors = [
    {name = "Rafael Leao", email = "rslgp@cin.ufpe.br"},
]
description = "A short description of your package"
readme = "README.md"
license = {text = "MIT"}
version = "0.0.2"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venv = "env37"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.7"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

